--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 services:
+# Postgres Sql database
   postgres:
     image: postgres
     restart: always
@@ -10,8 +11,22 @@ services:
 
     environment:
       - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=HZOq2ELBcVhMsVfXbR60BSdgBqOHcvCU
-
+      - POSTGRES_PASSWORD=example123
+# Mysql database
+  mysql:
+    image: mysql
+    restart: always
+    container_name: mysql
+    environment:
+      # MYSQL_DATABASE: example_db
+      # MYSQL_USER: test
+      # MYSQL_PASSWORD: test@123
+      MYSQL_ROOT_PASSWORD: example123
+    ports:
+      - 3306:3306 # make sure you don't have another container running on 3306
+    volumes:
+      - ./data/mysql_data:/var/lib/mysql
+# Redis database
   redis:
     image: redis:latest
     container_name: redis
@@ -20,7 +35,7 @@ services:
       - 6379:6379
     volumes:
       - ./data/redis-data:/data
-
+# Mongodb database
   mongo:
     image: mongo
     restart: always
@@ -29,17 +44,7 @@ services:
       - 27017:27017 # make sure we don't have another mongo container running on same port
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: HZOq2ELBcVhMsVfXbR60BSdgBqOHcvCU
+      MONGO_INITDB_ROOT_PASSWORD: example123
     volumes:
       - ./data/mongo_data/:/data/db/
 
-  mysql:
-    image: mysql
-    restart: always
-    container_name: mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: HZOq2ELBcVhMsVfXbR60BSdgBqOHcvCU
-    ports:
-      - 3306:3306 # make sure you don't have another container running on 3306
-    volumes:
-      - ./data/mysql_data:/var/lib/mysql
