--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: "3.1"
 services:
-  postgresql:
+  postgres:
     image: postgres
     restart: always
     container_name: postgres
-    volumes:
-      - ./data/postgresql:/var/lib/postgresql/data
     ports:
       - 5432:5432
     environment:
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=pass
+    volumes:
+      - ./data/postgres:/var/lib/postgresql/data
   mysql:
     image: mysql
     restart: always
